--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -11,7 +11,7 @@
         </a>
         <ul>
           <li><a href="{{ '/' | prepend: site.baseurl }}">About</a></li>
-          <li><a href="{{ '/portfolio' | prepend: site.baseurl }}/">Portfolio</a></li>
+          <li><a href="{{ '/portfolio' | prepend: site.baseurl }}/">Projects</a></li>
         </ul>
     </div>
   </nav>
