--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -12,6 +12,7 @@
         <ul>
           <li><a href="{{ '/' | prepend: site.baseurl }}">About</a></li>
           <li><a href="{{ '/portfolio' | prepend: site.baseurl }}/">Projects</a></li>
+          <li><a href="{{ '/experience' | prepend: site.baseurl }}/">Professional Experiences</a></li>
         </ul>
     </div>
   </nav>
